--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.12", "3.14"]
-        numpy-version: ["2.1.0", "2.3.5"]
-        h5py-version: ["3.11.0", "3.15.1"]
+        include:
+          - h5py-version: "3.11.0"
+            numpy-version: "2.1.0"
+            python-version: "3.10"
+          - h5py-version: "3.12.0"
+            numpy-version: "2.2.0"
+            python-version: "3.11"
+          - h5py-version: "3.13.0"
+            numpy-version: "2.3.0"
+            python-version: "3.12"
+          - h5py-version: "3.14.0"
+            numpy-version: "2.3.3"
+            python-version: "3.13"
+          - h5py-version: "3.15.1"
+            numpy-version: "2.4.0"
+            python-version: "3.14"
 
     steps:
       - uses: actions/checkout@v6
